src/main/java/com/example/olc/employee/error/NotFoundEmployeeError.java
package com.example.olc.employee.error;

import com.example.olc.common.error.BaseError;

public class NotFoundEmployeeError extends BaseError {}
